chore: add filter